Created seed categories, questions and answers. Randomly generating a category

--- a/app/views/game/start.html.erb
+++ b/app/views/game/start.html.erb
@@ -9,4 +9,5 @@
   <li>If true, alert the player the question is correct repeat the above steps.</li>
   <li>If false, pass the question on to the next player (get to this part in next milestone)</li>
 </ol>
+<h2><%= @random_category.title %></h2>
 
