--- a/app/views/game/start.html.erb
+++ b/app/views/game/start.html.erb
@@ -1,29 +1,21 @@
-<h1>After clicking the play button, you should be brought here.</h1>
-<p>Find me in app/views/game/start.html.erb</p>
-<ol>
-  <li>Select a random category</li>
-  <li>Select a random question from the specified category</li>
-  <li>Display the question along with the answers associated with it.</li>
-  <li>Wait for user to select an answer</li>
-  <li>Check if the answer is correct</li>
-  <li>If true, alert the player the question is correct repeat the above steps.</li>
-  <li>If false, pass the question on to the next player (get to this part in next milestone)</li>
-</ol>
 <h2><%= @random_category.title %></h2>
 <p><%= @random_question.title %></p>
 <tbody>
 <% @random_question.answers.all.shuffle.each do |answer| %>
     <button id=<%= answer.title.gsub(/\s+/, "") %> type="button" name=<%= answer.title %> value=<%= answer.is_correct %>><%= answer.title %></button><br>
-    <label ID="value" text =""></label>
+    <label ID="value"></label>
     <script type ="text/javascript" charset="utf-8">
         $(document).ready(function(){
-            alert('Document loaded!');
             $(<%= answer.title.gsub(/\s+/, "") %>).click(function() {
-                alert(<%= answer.is_correct %>);
+                <% if answer.is_correct %>
+                    alert('Congrats, you were right!!!!');
+                    location.reload();
+                <% else %>
+                    alert('Wrong! Next players turn!!!!');
+                    location.reload();
+                <% end %>
             })
         });
     </script>
 <% end %>
 </tbody>
-
-
