Added changes to the game class to show that we can query the database both ways!!!

--- a/app/views/game/start.html.erb
+++ b/app/views/game/start.html.erb
@@ -1,11 +1,15 @@
 <h2><%= @random_category.title %></h2>
 <p><%= @random_question.title %></p>
+
 <tbody>
 <% @random_question.answers.all.shuffle.each do |answer| %>
-    <button id=<%= answer.title.gsub(/\s+/, "") %> type="button" name=<%= answer.title %> value=<%= answer.is_correct %>><%= answer.title %></button><br>
+
+    <button id=<%= answer.title.gsub(/\s+/, "") %> type="button" name=<%= answer.title %> value=<%= answer.is_correct %>>
+      <%= answer.title %></button><br>
     <label ID="value"></label>
+
     <script type ="text/javascript" charset="utf-8">
-        $(document).ready(function(){
+        $(document).ready(function() {
             $(<%= answer.title.gsub(/\s+/, "") %>).click(function() {
                 <% if answer.is_correct %>
                     alert('Congrats, you were right!!!!');
@@ -17,5 +21,20 @@
             })
         });
     </script>
+
 <% end %>
+
 </tbody>
+<br/><br/>
+<h1>Below shows we can query both ways in our database.</h1></<br/>
+<p>These answers belong to the question: <%= @answers[0].question.to_s %></p>
+<p>This question belongs to the category: <%= @answers[0].question.category.to_s %></p>
+<br/>
+<p>This query retrieves all answers in the database, selects a random one, and gets the question and category associated with it.</p>
+<p>Random answer: <%= @random_answer.to_s %></p>
+<p>Question associate with answer: <%= @random_answer.question.to_s %></p>
+<p>Category associated with answer and question: <%= @random_answer.question.category.to_s %></p>
+<p>The answers to go along with the question:  <br/> <% @random_answer.question.answers.each do |answer| %>
+      <%= answer %><br> <%end %></p>
+
+
