--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,4 +1,3 @@
 <h1>Welcome to Trippin' On Trivia</h1>
-<p>Find me in app/views/play/index.html.erb</p>
 
-<%= link_to 'Play Trippin On Trivia' , game_start_path %>
+<%= link_to "Play Trippin On Trivia" , game_start_path, class: "btn btn-primary" %>
