--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the game controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#spinner {
+	height: 368px;
+	width: 368px;
+	z-index: -1;
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+#center {
+	z-index: 1;
+	position: relative;
+	top: 245px;
+	left: 130px;
+}
