--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Trippin' On Trivia</h1>
 
-<%= link_to "Play Trippin On Trivia" , game_start_path, class: "btn btn-primary" %>
+<%= link_to "Play Trippin On Trivia" , game_category_selection_path, class: "btn btn-primary" %>
