--- a/app/views/game/category_selection.html.erb
+++ b/app/views/game/category_selection.html.erb
@@ -1,6 +1,7 @@
+<h1>Spin the Wheel!</h1>
 <img src= "/images/centerspin.png" id="center">
 <img src= "/images/spinner.png" id="spinner">
-<button onclick="changePage()" id="questions" class="questions" type="questions">Get Question</button>
+<button onclick="changePage()" id="questions" type="questions" class="btn btn-primary btn-lg btn-block">Get Question</button>
 
 <script type ="text/javascript" charset="utf-8">
 jQuery(document).ready(function()
