--- a/app/views/game/start.html.erb
+++ b/app/views/game/start.html.erb
@@ -44,6 +44,26 @@
 
   </script>
 </head>
+<h1 id="countdown" class="timer"></h1>
+<script>
+    var seconds = 30;
+    function secondPassed() {
+        var minutes = Math.round((seconds - 30)/60);
+        var remainingSeconds = seconds % 60;
+        if (remainingSeconds < 10) {
+            remainingSeconds = "0" + remainingSeconds;
+        }
+        document.getElementById('countdown').innerHTML = minutes + ":" + remainingSeconds;
+        if (seconds == 0) {
+            clearInterval(countdownTimer);
+            document.getElementById('countdown').innerHTML = "Buzz Buzz";
+        } else {
+            seconds--;
+        }
+    }
+
+    var countdownTimer = setInterval('secondPassed()', 1000);
+</script>
 <h2 class="text-center"><%= $random_category.title %></br>
   <small><%= @random_question.title %></small></h2>
 
