Working on database issues

--- a/app/views/game/category_selection.html.erb
+++ b/app/views/game/category_selection.html.erb
@@ -45,6 +45,8 @@
 <img src= "/images/centerspin.png" id="center">
 <img src= "/images/spinner.png" id="spinner">
 <button onclick="changePage()" id="questions" type="questions" class="btn btn-primary btn-lg btn-block">Get Question</button>
+<p><%= Player.first.meter%></p>
+
 
 <script type ="text/javascript" charset="utf-8">
 jQuery(document).ready(function()
