--- a/app/views/game/category_selection.html.erb
+++ b/app/views/game/category_selection.html.erb
@@ -46,7 +46,7 @@
 <img src= "/images/spinner.png" id="spinner">
 <button onclick="changePage()" id="questions" type="questions" class="btn btn-primary btn-lg btn-block">Get Question</button>
 <p><%= Player.first.meter%></p>
-
+<p><%= Player.first.trophies.count%></p>
 
 <script type ="text/javascript" charset="utf-8">
 jQuery(document).ready(function()
