Added ajax functionality when displaying the spinner. Working on the functionality for the button...

--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,6 +1,6 @@
-<div class="text-center">
+<div id="main" class="text-center">
 <h1>Welcome to Trippin' On Trivia</h1>
-<%= link_to "Play Trippin On Trivia" , game_category_selection_path, class: "btn btn-primary" %>
+<%= link_to "Play Trippin On Trivia" , action: :display_spinner,class: "btn btn-inverse", remote: true%>
   <br/>  <br/>
 
 </div>
