--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -1,4 +1,4 @@
 <h1>Spin the Wheel!</h1>
 <img src= "/images/centerspin.png" id="center">
 <img src= "/images/spinner.png" id="spinner">
-<%= button_to "Play Trippin On Trivia" , action: :display_spinner,class: "btn btn-inverse", remote: true%>
+<button id="questions" type="questions" class="btn btn-primary btn-lg btn-block"><%= link_to "Get Questions" , action: :display_questions,class: "btn btn-inverse", remote: true%></button>
