--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -2,3 +2,5 @@
 <img src= "/images/centerspin.png" id="center">
 <img src= "/images/spinner.png" id="spinner">
 <button id="questions" type="questions" class="btn btn-primary btn-lg btn-block"><%= link_to "Get Questions" , action: :display_questions,class: "btn btn-inverse", remote: true%></button>
+<p>Meter: <%= Player.first.meter%></p>
+<p>Trophies: <%= Player.first.trophies.count%></p>
