--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,16 @@
       <![endif]-->
     </head>
     <body>
-    <div id="user_nav">
+    <p class="navbar-text pull-left">
       <% if user_signed_in? %>
-          Signed in as <%= current_user.email %>. This cannot be cheese?
-          <%= link_to 'Sign out', destroy_user_session_path %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
       <% else %>
-          <%= link_to 'Register', new_user_registration_path %> or <%= link_to 'Sign in', new_user_session_path %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
       <% end %>
-    </div>
+
         <div class="container">
           <p class="notice"><%= notice %></p>
           <p class="alert"><%= alert %></p>
