--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -9,6 +9,6 @@
 <script>
     function ChangePage()
     {
-        $('body').load('/play/display_spinner.html');
+        $('body').load('play/display_spinner.html');
     }
 </script>
