Styled trophy buttons.

--- a/app/views/play/display_trophy_select.erb
+++ b/app/views/play/display_trophy_select.erb
@@ -15,7 +15,7 @@
         <% next %>
   <%end%>
       <div class="text-center">
-        <button id=<%= category.title.gsub(/\s+/, "") %> type="button" name=<%= category.title %> value= <%=category.id%>>
+        <button id=<%= category.title.gsub(/\s+/, "") %> type="button" name=<%= category.title %> value= <%=category.id%> class="btn btn-primary btn-lg btn-block">
           <%=category.title %></button><br>
       </div>
       <script type ="text/javascript" charset="utf-8">
