--- a/app/views/play/display_questions.html.erb
+++ b/app/views/play/display_questions.html.erb
@@ -60,6 +60,7 @@
               })
               document.getElementById('countdown').innerHTML = "Time up!";
               alert('Times up! You got it wrong! Next players turn!!!!');
+              <% Player.first.update_attribute(:isActivePlayer, false) %>
               ChangePage();
           } else {
               seconds--;
@@ -108,6 +109,7 @@
                     this.style.background = '#FF0000';
                     this.innerHTML = "Incorrect!!!";
                     correctButton.style.background = '#00BB00';
+                    <% Player.first.update_attribute(:isActivePlayer, false) %>
                 }
                 clearInterval(countdownTimer);
                 setTimeout(ChangePage, 500);
