--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -6,7 +6,8 @@
   <thead>
     <tr>
       <th>Meter</th>
-      <th colspan="3"></th>
+      <th>Active</th>
+      <th colspan="0"></th>
     </tr>
   </thead>
 
@@ -14,6 +15,7 @@
     <% @players.each do |player| %>
       <tr>
         <td><%= player.meter %></td>
+        <td><%= player.isActivePlayer %></td>
         <td><%= link_to 'Show', player %></td>
         <td><%= link_to 'Edit', edit_player_path(player) %></td>
         <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
