--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -5,5 +5,10 @@
   <%= @player.meter %>
 </p>
 
+<p>
+  <strong>IsActivePlayer:</strong>
+  <%= @player.isActivePlayer %>
+</p>
+
 <%= link_to 'Edit', edit_player_path(@player) %> |
 <%= link_to 'Back', players_path %>
