--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,10 +1,7 @@
 <div id="main" class="text-center">
-  <body>
-  <h1>Welcome to Trippin' On Trivia</h1>
   <button onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-    Go</button>
+    + New Game</button>
   <br/>  <br/>
-  </body>
 </div>
 <script>
     function ChangePage()
