--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,11 +1,12 @@
 <div id="main" class="text-center">
   <button onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-    + New Game</button>
+    + NEW GAME</button>
   <br/>  <br/>
 </div>
+
 <script>
     function ChangePage()
     {
-        $('body').load('play/display_spinner.html');
+        $('body').load('play/display_new_game_page.html');
     }
 </script>
